@@ -13,6 +13,7 @@ static const char CL_VENDOR_AMD1[]          = "Advanced Micro Devices, Inc.";
 static const char CL_VENDOR_AMD2[]          = "AuthenticAMD";
 static const char CL_VENDOR_AMD_USE_INTEL[] = "GenuineIntel";
 static const char CL_VENDOR_APPLE[]         = "Apple";
+static const char CL_VENDOR_APPLE_USE_AMD[] = "AMD";
 static const char CL_VENDOR_APPLE_USE_NV[]  = "NVIDIA";
 static const char CL_VENDOR_INTEL_BEIGNET[] = "Intel";
 static const char CL_VENDOR_INTEL_SDK[]     = "Intel(R) Corporation";
